typewriter-test/tests/snapshots/json_schema_tests__adjacent_enum_snapshot.snap
---
source: typewriter-test/tests/json_schema_tests.rs
expression: output
---
{
  "$id": "Event",
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "oneOf": [
    {
      "additionalProperties": false,
      "properties": {
        "c": {
          "properties": {
            "x": {
              "type": "integer"
            },
            "y": {
              "type": "integer"
            }
          },
          "required": [
            "x",
            "y"
          ],
          "type": "object"
        },
        "t": {
          "const": "click",
          "type": "string"
        }
      },
      "required": [
        "t",
        "c"
      ],
      "type": "object"
    },
    {
      "additionalProperties": false,
      "properties": {
        "c": {
          "type": "string"
        },
        "t": {
          "const": "key_press",
          "type": "string"
        }
      },
      "required": [
        "t",
        "c"
      ],
      "type": "object"
    },
    {
      "additionalProperties": false,
      "properties": {
        "t": {
          "const": "resize",
          "type": "string"
        }
      },
      "required": [
        "t"
      ],
      "type": "object"
    }
  ],
  "title": "Event"
}
